[package]
name = "bot_bayun"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"     # optimize for size (use "s" for balance, "z" for smallest)
lto = true          # enable link-time optimization
codegen-units = 1   # better optimizations, slower build
panic = "abort"     # smaller binary, no unwinding
strip = true        # automatically strip symbols (cargo 1.70+)

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23" }
teloxide = { version = "0.17.0", features = ["macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
chrono = "0.4.41"
dotenv = { version = "0.15.0" }
dashmap = {version = "6.1.0"}